ignasr/local/ignasr-service-local.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ignasr
  name: ignasr
  namespace: limdongjin
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: ignasr
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
# equivalent command:
#   kubectl expose deployment ignasr
